--- a/Capstone Project/Project/Frontend/medicare-frontend/src/app/admindashboard/admindashboard.component.html
+++ b/Capstone Project/Project/Frontend/medicare-frontend/src/app/admindashboard/admindashboard.component.html
@@ -1,3 +1,6 @@
 <div>
-    <h2>Welcome to Admin Home Page</h2>
+    <h2>Welcome to Admin Home Page {{userName}}</h2>
+
+    <br/>
+    <input type="button" value="logout" (click)="logout()"/>
 </div>
