--- a/Capstone Project/Project/Frontend/medicare-frontend/src/app/userdashboard/userdashboard.component.html
+++ b/Capstone Project/Project/Frontend/medicare-frontend/src/app/userdashboard/userdashboard.component.html
@@ -1,1 +1,6 @@
-<p>userdashboard works!</p>
+<div>
+    <h2>Welcome to Home Page user {{userName}}</h2>
+
+    <br/>
+    <input type="button" value="logout" (click)="logout()"/>
+</div>
