--- a/Capstone Project/Project/Frontend/medicare-frontend/src/app/login/login.component.html
+++ b/Capstone Project/Project/Frontend/medicare-frontend/src/app/login/login.component.html
@@ -12,4 +12,7 @@
         <input type="submit" value="SignIn"/>
         <input type="reset" value="reset"/>
     </form>
+    <span style="color:red">{{errorMsg}}</span>
+    <br/>
+    <a routerLink="signUp">SignUp</a>
 </div>
