--- a/Capstone Project/Project/Frontend/medicare-frontend/src/app/admindashboard/admindashboard.component.html
+++ b/Capstone Project/Project/Frontend/medicare-frontend/src/app/admindashboard/admindashboard.component.html
@@ -1,6 +1,9 @@
 <div>
     <h2>Welcome to Admin Home Page {{userName}}</h2>
-
+    <a routerLink="/addMedicine">Add Medicine</a> |
+    <a routerLink="/adminRetrieveMedicine">Retrieve All Medicine Details</a>
+    <br/>
+        <router-outlet></router-outlet>
     <br/>
     <input type="button" value="logout" (click)="logout()"/>
 </div>
